--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
   <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
   <title>I'M FAVOUR</title>
 </head>
-<body>
+<body style="background-color: black">
   <h1>
-    <span style="font-size:6rem; text-align: center; color: black">
+    <span style="font-size:6rem; text-align: center; color: #fff; display: flex; justify-content:center; margin-top:40px">
     I'M Favour (KESTIE)
     </span>
   </h1>
   <div class="favour">
     <span style="margin-top:40px">
-      <img src="./images/favour.jpg" width="100%" height="100%">
+      <img src="./images/favour.png" width="100%" height="100%">
     </span>
   </div>
-  <div class="favour2">
+  <div class="favour1">
     <span>
       <img src="./images/favour1.png" width="100%" height="100%">
     </span>
@@ -28,8 +28,13 @@
     </div>
     <div class="favour3">
       <span>
-        <img src="./images/favour3.jpg" width="100%" height="100%">
+        <img src="./images/favour3.png" width="100%" height="100%">
       </span>
     </div>
+  <!---  <div class="favour4">
+    <span>
+      <img src="./images/favour4.png"
+    </span>
+  </div>  --->
 </body>
 </html>
