--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
         <img src="./images/favour3.png" width="100%" height="100%">
       </span>
     </div>
-  <!---  <div class="favour4">
-    <span>
-      <img src="./images/favour4.png"
-    </span>
-  </div>  --->
+  <div class="doc">
+    <a href="/Oniro.pdf" download="oniro-doc">Download my CV </a>
+ <a href="/Oniro.pdf">Download my CV </a>
+ 
+  </div>
 </body>
 </html>
