--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
   <div class="doc">
     <a href="/Oniro.pdf" download="oniro-doc">Download my CV </a>
- <a href="/Oniro.pdf">Download my CV </a>
+ <a href="/Oniro.pdf" style="color: white">Download my CV </a>
  
   </div>
 </body>
