--- a/favour.html
+++ b/favour.html
@@ -8,7 +8,7 @@
 <body>
   <h1>
     <span style="font-size:6rem; text-align: center; color: black">
-    I'M Favour (KESTIE)
+    I'M Favour (KESTIE) X
     </span>
   </h1>
   <div class="favour">
