--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       </span>
     </div>
   <div class="doc">
-    <a href="/Oniro.pdf" download="oniro-doc">Download my CV </a>
- <a href="/Oniro.pdf" style="color: white">Download my CV </a>
+    <a href="./doc/Oniro.pdf" download="oniro-doc">Download my CV </a><br><br>
+ <a href="./doc/Oniro.pdf" style="color: white">Download my CV </a>
  
   </div>
 </body>
